[package]
name = "kantor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
futures = "0.3.26"
log = { workspace = true }
